# LotterySimulator

./: CMakeLists.txt  README.md
src/: main.cpp
src/jogo/: Game.cpp  Game.h
src/megasena/: MegaSena.cpp  MegaSena.h
src/utils/random_generator/: RandomGenerator.cpp  RandomGenerator.h
src/utils/uid/: UID.cpp  UID.h
